feat: add module 0

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -22,13 +22,9 @@ modular academy is under construction. you got here early! 🚧
 if you've finished module 1, we're working on more now for you to continue your journey. stay tuned!
 :::
 
-{/* ## submit a blob, become a rollup
-
-:::info
-module 0 is under construction. you got here early! meanwhile, check out module 1 🚧
+## submit a blob, become a rollup
 
 <Button href="/modules/0/intro" variant="accent">module 0: submit a blob to Celestia</Button>
-::: */}
 
 ## smart contracts on rollups
 
@@ -36,11 +32,3 @@ Get started with module 1. This will show you how to
 create an ERC-721 smart contract on OP Celestia Raspberry testnet.
 
 <Button href="/modules/1/intro" variant="accent">module 1: Raspberry NFT</Button>
-
-## building a custom rollup framework
-
-Coming soon™
-
-## building your own RaaS setup with custom rollup framework
-
-Coming soon™
