--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -2,7 +2,7 @@
 layout: landing
 showLogo: false
 title: modular academy - build whatever with Celestia underneath
-description: from smart contracts to building customized rollups, at your own pace
+description: from blobs to building customized rollups, at your own pace
 ---
 
 import { HomePage } from 'vocs/components'
@@ -11,7 +11,7 @@ import { HomePage } from 'vocs/components'
   <HomePage.Logo />
   <h1 className="text-4xl font-bold">welcome to modular academy</h1>
   <HomePage.Tagline>build whatever with Celestia underneath</HomePage.Tagline>
-  <HomePage.Description>from smart contracts to building customized rollups, at your own pace</HomePage.Description>
+  <HomePage.Description>from blobs to building customized rollups, at your own pace</HomePage.Description>
   <HomePage.Buttons>
     <HomePage.Button href="/build-whatever" variant="accent">get started</HomePage.Button>
   </HomePage.Buttons>
