--- a/docs/pages/modules/1/intro.mdx
+++ b/docs/pages/modules/1/intro.mdx
@@ -6,11 +6,7 @@ description: deploy your first smart contract and mint an NFT.
 
 ## deploying a smart contract to an EVM rollup
 
-welcome to the world of rollups! If you're an Ethereum Virtual Machine (EVM) developer, you might wonder how building on a rollup, like [OP Celestia Raspberry testnet](https://raas.gelato.network/rollups/details/public/op-celestia-testnet), compares to traditional blockchains. the truth is, the experience is designed to be the same.
-
-## what is a rollup?
-
-a rollup is blockchain that outsources one of its components to a separate chain. think of a rollup as a blockchain with the superpowers of scalability, efficiency, and verifiability by all.
+welcome to the world of rollups! if you're an Ethereum Virtual Machine (EVM) developer, you might wonder how building on a rollup, like [OP Celestia Raspberry testnet](https://raas.gelato.network/rollups/details/public/op-celestia-testnet), compares to traditional blockchains. the truth is, the experience is designed to be the same.
 
 ## what is OP Celestia Raspberry testnet?
 
@@ -20,7 +16,7 @@ Raspberry testnet is an OP Stack rollup that settles on Ethereum and posts data 
 
 the Raspberry testnet is a rollup that operates with the familiarity of the EVM, making it an ideal playground for developers looking to explore the benefits of rollups without straying too far from the Ethereum development environment they know and love.
 
-## ERC-721 on a rollup
+## why should i use a rollup?
 
 deploying an ERC-721 on a rollup is very similar to deploying on Ethereum. however, the added efficiency of rollups means you can expect faster transaction finality and lower gas fees. this makes the minting process of unique tokens, such as digital art, collectibles, or tokens for real world assets, more accessible and cost-effective.
 
