--- a/docs/pages/modules/1/minting.mdx
+++ b/docs/pages/modules/1/minting.mdx
@@ -41,7 +41,7 @@ nice! you've minted an ERC-721 NFT on a rollup!
 
 ## add the contract to your wallet
 
-find the contract address in the thirdweb dashboard and add it using "Import NFT" in MetaMask.
+find the contract address in the thirdweb dashboard and add it using "Import NFT" in metamask.
 
 ![nft-in-wallet](/module_1/nft-in-wallet.png)
 
