--- a/docs/pages/modules/1/raspberry.mdx
+++ b/docs/pages/modules/1/raspberry.mdx
@@ -5,14 +5,14 @@ description: setting up your wallet with OP Celestia Raspberry testnet.
 # getting set up with Raspberry
 
 ::::steps
-## install MetaMask
+## install metamask
 
-first, install [download MetaMask](https://metamask.io/download) if you don't have it already.
+first, install [download metamask](https://metamask.io/download) if you don't have it already.
 follow the instructions to set up your wallet and do not share your mnemonic with anyone. this mnemonic (a.k.a. recovery phrase) is the key to your wallet and should always be kept secret.
 
 ## add OP Celestia Raspberry to your wallet
 
-now you can add OP Celestia Raspberry testnet as a chain in MetaMask from [the OP Celestia Raspberry testnet page](https://raas.gelato.network/rollups/details/public/op-celestia-testnet)
+now you can add OP Celestia Raspberry testnet as a chain in metamask from [the OP Celestia Raspberry testnet page](https://raas.gelato.network/rollups/details/public/op-celestia-testnet)
 
 ![add network](/module_1/add-network.png)
 
@@ -22,7 +22,7 @@ in order to deploy your first contract, you'll need some testnet ETH. Visit a Se
 
 ![bridge](/module_1/bridge.png)
 
-this process should only take a few minutes. once you're done, you should see your OP Celestia Raspberry ETH in your MetaMask wallet.
+this process should only take a few minutes. once you're done, you should see your OP Celestia Raspberry ETH in your metamask wallet.
 
 ![bridge confirm](/module_1/bridge-confirm.png)
 
