feat: udpates mod0

--- a/docs/pages/modules/0/post-a-blob.mdx
+++ b/docs/pages/modules/0/post-a-blob.mdx
@@ -60,7 +60,7 @@ wait for your transaction to land and head to step 3
 
 ## do some thing to your state
 
-now let's update your state. do some arbitrary thing to your state and post a new blob.
+now let's update your state. do some arbitrary thing to your state and post a new blob. in this case, i multiplied my state by 10.
 
 ```json
 {
