--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -19,7 +19,7 @@ import { Button } from 'vocs/components'
 modular academy is under construction. you got here early! 🚧
 
 :::success
-if you've finished module 1, we're working on more now for you to continue your journey. stay tuned!
+if you've finished modules 0 and 1, we're working on more now for you to continue your journey. stay tuned!
 :::
 
 ## submit a blob, become a rollup
