feat: add react types and make component tsx

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -12,7 +12,7 @@ showSidebar: false
 layout: landing
 ---
 import { Button } from 'vocs/components'
-import ModuleCard from '../public/components/ModuleCard.jsx'
+import ModuleCard from '../public/components/ModuleCard.tsx'
 
 # build whatever with Celestia underneath ✨
 
