docs: change heading

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -23,7 +23,7 @@ modular academy is under construction. you got here early! 🚧
 if you've finished modules 0 and 1, we're working on more now for you to continue your journey. stay tuned!
 :::
 
-## submit a blob, become a rollup
+## submit a blob
 
 <ModuleCard 
   image="/module_cards/0.png" 
