--- a/docs/pages/modules/0/post-a-blob.mdx
+++ b/docs/pages/modules/0/post-a-blob.mdx
@@ -7,9 +7,10 @@ description: post your blob.
 let's become a rollup by posting a blob to Celestia.
 
 ::::steps
+
 ## decide what you're gonna post
 
-okay so for this example let's start small. instead of making a rollup with complicated logic, let's just post a blob with a single number in it for state. we'll call this number our "state". our rollup (you, in this case) will keep track of this number and update it every time we post a new blob.
+for this example, let's start small. instead of making a rollup with complicated logic, let's just post a blob with a single number in it for state. we'll call this number our "state". our rollup (you, in this case) will keep track of this number and update it every time we post a new blob.
 
 i'll start with 42. we'll also need some way to connect the blocks, in this example, we'll use a block number, the previous blob's committment, height, and namespace.
 
