--- a/docs/pages/modules/0/submit.mdx
+++ b/docs/pages/modules/0/submit.mdx
@@ -11,3 +11,5 @@ to complete module 0, submit the transaction with your last blob you posted to C
 ## next steps
 
 congratulations! you've submitted module 0. you can now head on to [module 1](/modules/1/intro) and learn about deploying a smart contract to an existing EVM rollup.
+
+share your progress in [the telegram](https://t.me/modularacademyorg) and on [twitter](https://twitter.com/intent/tweet?text=gmodularacademy) if you'd like
