--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -26,7 +26,7 @@ if you've finished modules 0 and 1, we're working on more now for you to continu
 ## submit a blob
 
 <ModuleCard 
-  image="/module_cards/0.png" 
+  image="/module_cards/0.1.svg" 
   title="module 0" 
   description="submit a blob to Celestia and become your own rollup" 
   link="/modules/0/intro"
@@ -38,14 +38,14 @@ Get started with module 1. This will show you how to
 create an ERC-721 smart contract on OP Celestia Raspberry testnet.
 
 <ModuleCard 
-  image="/module_cards/1.png" 
+  image="/module_cards/1.1.svg" 
   title="module 1" 
   description="deploy a contract and mint an NFT on OP Celestia Raspberry testnet" 
   link="/modules/1/intro"
 />
 
 <ModuleCard 
-  image="/module_cards/2.png" 
+  image="/module_cards/2.1.svg" 
   title="module 2" 
   description="coming soon" 
   link="/build-whatever"
