--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -20,17 +20,17 @@ import ModuleCard from '../public/components/ModuleCard.tsx'
 modular academy is under construction. you got here early! 🚧
 
 :::success
-if you've finished modules 0 and 1, we're working on more now for you to continue your journey. stay tuned!
+if you've finished module 1, we're working on more now for you to continue your journey. stay tuned!
 :::
-
+{/* 
 ## submit a blob
 
 <ModuleCard 
   image="/module_cards/0.1.svg" 
   title="module 0" 
-  description="submit a blob to Celestia and become your own rollup" 
+  description="submit a blob to Celestia and make your own rollup" 
   link="/modules/0/intro"
-/>
+/> */}
 
 ## smart contracts on rollups
 
