docs: style copy

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -34,7 +34,7 @@ if you've finished module 1, we're working on more now for you to continue your 
 
 ## smart contracts on rollups
 
-Get started with module 1. This will show you how to
+get started with module 1. This will show you how to
 create an ERC-721 smart contract on OP Celestia Raspberry testnet.
 
 <ModuleCard 
