feat: use webp images

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -38,14 +38,14 @@ get started with module 1. This will show you how to
 create an ERC-721 smart contract on OP Celestia Raspberry testnet.
 
 <ModuleCard 
-  image="/module_cards/1.1.svg" 
+  image="/module_cards/0.0.webp" 
   title="module 1" 
   description="deploy a contract and mint an NFT on OP Celestia Raspberry testnet" 
   link="/modules/1/intro"
 />
 
 <ModuleCard 
-  image="/module_cards/2.1.svg" 
+  image="/module_cards/0.1.webp" 
   title="module 2" 
   description="coming soon" 
   link="/build-whatever"
