docs: add intro text

--- a/docs/pages/build-whatever.mdx
+++ b/docs/pages/build-whatever.mdx
@@ -16,6 +16,8 @@ import ModuleCard from '../public/components/ModuleCard.tsx'
 
 # build whatever with Celestia underneath ✨
 
+welcome to modular academy, where we'll learn about building with modular blockchains like Celestia. we're excited you made it and looking forward to seeing what you'll build!
+
 :::tip
 modular academy is under construction. you got here early! 🚧
 
